NIFI-12898 Implemented backend of new Asset Management capability